--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@ body {
 <body>
 <div class="background" >
 	<div class="sidebar">
-		<img class="menu" src="menu.png">
-		<img class="search" src="search.png">
-		<img class="shop" src="shop.png">
+		<img class="menu" src="menu.jpg">
+		<img class="search" src="search.jpg">
+		<img class="shop" src="shop.jpg">
 	</div>
 
 	<div class="topnav" id="myTopnav">
 		<a> 
 		<img class = "logo_img" src="logo.png">
-		<img class="gmail" src="gmail.png"  width="42" height="42" style="float:right">
-		<img class  = "bells" src="bells.png"  width="40" height="33" style="float:right">
+		<img class="gmail" src="gmail.jpg"  width="42" height="42" style="float:right">
+		<img class  = "bells" src="bells.jpg"  width="40" height="33" style="float:right">
 		</a>
 	</div>
 
